--- a/Depo/LifeBox_Business/Signing/Lifetech/LifeBox_Business_LifeTech.entitlements
+++ b/Depo/LifeBox_Business/Signing/Lifetech/LifeBox_Business_LifeTech.entitlements
@@ -17,7 +17,7 @@
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)by.come.life.Lifebox.LifeboxWidget</string>
+		<string>$(AppIdentifierPrefix)by.com.life.LifeboxBusiness</string>
 	</array>
 </dict>
 </plist>
