--- a/Depo/LifeboxShared/LifeBox_Business/LifeboxShared.entitlements
+++ b/Depo/LifeboxShared/LifeBox_Business/LifeboxShared.entitlements
@@ -8,9 +8,9 @@
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)by.come.life.Lifebox</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillidepo</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent</string>
+		<string>$(AppIdentifierPrefix)by.com.life.LifeboxBusiness.Share</string>
 	</array>
 </dict>
 </plist>
