--- a/Depo/NotificationService/LifeBox_Business/NotificationService-appstore.entitlements
+++ b/Depo/NotificationService/LifeBox_Business/NotificationService-appstore.entitlements
@@ -10,9 +10,9 @@
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)by.come.life.Lifebox</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.lifebox.business</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent</string>
+		<string>$(AppIdentifierPrefix)com.turkcell.lifebox.business.push</string>
 	</array>
 </dict>
 </plist>
