--- a/Depo/NotificationService/LifeBox_Business/NotificationService.entitlements
+++ b/Depo/NotificationService/LifeBox_Business/NotificationService.entitlements
@@ -10,9 +10,9 @@
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)by.come.life.Lifebox</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillidepo</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent</string>
+		<string>$(AppIdentifierPrefix)by.com.life.LifeboxBusiness.PushNotifications</string>
 	</array>
 </dict>
 </plist>
