--- a/Depo/LifeboxFileProvider/LifeBox_Business/LifeboxFileProvider-enterprise.entitlements
+++ b/Depo/LifeboxFileProvider/LifeBox_Business/LifeboxFileProvider-enterprise.entitlements
@@ -9,8 +9,8 @@
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)com.turkcell.lifebox.business</string>
-		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.lifebox.business.files</string>
+		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent.files</string>
 	</array>
 </dict>
 </plist>
