--- a/Depo/LifeboxShared/LifeBox_Business/LifeboxShared-enterprise.entitlements
+++ b/Depo/LifeboxShared/LifeBox_Business/LifeboxShared-enterprise.entitlements
@@ -9,8 +9,8 @@
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)com.turkcell.lifebox.business</string>
-		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.lifebox.business.share</string>
+		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent.share</string>
 	</array>
 </dict>
 </plist>
