--- a/Depo/LifeboxFileProvider/LifeBox_Business/LifeboxFileProvider.entitlements
+++ b/Depo/LifeboxFileProvider/LifeBox_Business/LifeboxFileProvider.entitlements
@@ -10,7 +10,7 @@
 	<array>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillidepo</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent</string>
-		<string>$(AppIdentifierPrefix)by.com.life.LifeboxBusiness.FileProvider</string>
+		<string>$(AppIdentifierPrefix)by.com.life.LifeboxBusiness</string>
 	</array>
 </dict>
 </plist>
