--- a/Depo/LifeboxFileProviderUI/LifeBox_Business/LifeboxFileProviderUI.entitlements
+++ b/Depo/LifeboxFileProviderUI/LifeBox_Business/LifeboxFileProviderUI.entitlements
@@ -10,7 +10,7 @@
 	<array>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillidepo</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent</string>
-		<string>$(AppIdentifierPrefix)by.com.life.LifeboxBusiness.FileProviderUI</string>
+		<string>$(AppIdentifierPrefix)by.com.life.LifeboxBusiness</string>
 	</array>
 </dict>
 </plist>
