--- a/Depo/LifeBox_Business/Signing/Lifetech/LifeBox_Business_LifeTech-Info.plist
+++ b/Depo/LifeBox_Business/Signing/Lifetech/LifeBox_Business_LifeTech-Info.plist
@@ -10,7 +10,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>lifebox-LIFE</string>
+	<string>lifebox-for-business</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
