--- a/Depo/LifeBox_Business/Signing/Lifetech/LifeBox_Business_LifeTech-Info.plist
+++ b/Depo/LifeBox_Business/Signing/Lifetech/LifeBox_Business_LifeTech-Info.plist
@@ -34,8 +34,7 @@
 			<array>
 				<string>db-422fptod5dlxrn8</string>
 				<string>fb531658366898592</string>
-				<string>lifeboxbusiness
-</string>
+				<string>lifeboxbusiness</string>
 			</array>
 		</dict>
 	</array>
