--- a/Depo/LifeBox_Business/Signing/Turkcell/TC_LifeBox_Business-Info.plist
+++ b/Depo/LifeBox_Business/Signing/Turkcell/TC_LifeBox_Business-Info.plist
@@ -33,7 +33,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>db-422fptod5dlxrn8</string>
-				<string>akillidepo</string>
+				<string>lifeboxbusiness</string>
 				<string>fb531658366898592</string>
 			</array>
 		</dict>
