missing info.plist names

--- a/Depo/LifeBox_Business/Signing/Turkcell/TC_LifeBox_Business-Info.plist
+++ b/Depo/LifeBox_Business/Signing/Turkcell/TC_LifeBox_Business-Info.plist
@@ -158,6 +158,7 @@
 		<string>TurkcellSaturaDem.ttf</string>
 		<string>TurkcellSaturaBol.ttf</string>
 		<string>TurkcellSaturaBolIta.ttf</string>
+		<string>GT-America-Standard-Regular-Trial.otf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
