--- a/Depo/LifeBox_Business/Signing/Lifetech/LifeBox_Business_LifeTech-Info.plist
+++ b/Depo/LifeBox_Business/Signing/Lifetech/LifeBox_Business_LifeTech-Info.plist
@@ -162,6 +162,7 @@
 		<string>TurkcellSaturaBol.ttf</string>
 		<string>TurkcellSaturaBolIta.ttf</string>
 		<string>GT-America-Standard-Regular-Trial.otf</string>
+		<string>GT-America-Standard-Medium-Trial.otf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
