--- a/Depo/LifeBox_Business/Signing/Turkcell/TC_LifeBox_Business-Info.plist
+++ b/Depo/LifeBox_Business/Signing/Turkcell/TC_LifeBox_Business-Info.plist
@@ -159,6 +159,7 @@
 		<string>TurkcellSaturaBol.ttf</string>
 		<string>TurkcellSaturaBolIta.ttf</string>
 		<string>GT-America-Standard-Regular-Trial.otf</string>
+		<string>GT-America-Standard-Medium-Trial.otf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
