--- a/Depo/LifeBox_Business/Signing/Lifetech/LifeBox_Business_LifeTech-Info.plist
+++ b/Depo/LifeBox_Business/Signing/Lifetech/LifeBox_Business_LifeTech-Info.plist
@@ -75,6 +75,7 @@
 		<string>fb-messenger-api</string>
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
+		<string>cydia</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
