--- a/Depo/LifeBox_Business/Signing/Lifetech/LifeBox_Business_LifeTech.entitlements
+++ b/Depo/LifeBox_Business/Signing/Lifetech/LifeBox_Business_LifeTech.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:ld9m.adj.st</string>
+		<string>applinks:enae.adj.st</string>
 		<string>applinks:tcloudstb.turkcell.com.tr</string>
 		<string>applinks:adepotest.turkcell.com.tr</string>
 		<string>applinks:mylifebox.com</string>
