--- a/Depo/LifeBox_Business/Signing/Turkcell/TC_LifeBox_Business-Info_ent.plist
+++ b/Depo/LifeBox_Business/Signing/Turkcell/TC_LifeBox_Business-Info_ent.plist
@@ -10,7 +10,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>lifebox</string>
+	<string>lifebox business</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
