--- a/Depo/LifeBox_Business/Signing/Turkcell/TC_LifeBox_Business-Info.plist
+++ b/Depo/LifeBox_Business/Signing/Turkcell/TC_LifeBox_Business-Info.plist
@@ -10,7 +10,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>lifebox&#x2007;business</string>
+	<string>lifebox business</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
@@ -37,7 +37,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>106</string>
+	<string>107</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
