disable arbitrary loads

--- a/Depo/LifeBox_Business/Signing/Turkcell/TC_LifeBox_Business-Info.plist
+++ b/Depo/LifeBox_Business/Signing/Turkcell/TC_LifeBox_Business-Info.plist
@@ -100,31 +100,7 @@
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-		<key>NSExceptionDomains</key>
-		<dict>
-			<key>http://adepo.turkcell.com.tr/api/auth/gsm/login</key>
-			<dict>
-				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<true/>
-				<key>NSIncludesSubdomains</key>
-				<true/>
-			</dict>
-			<key>http://cropyioslifebox.com</key>
-			<dict>
-				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<string>YES</string>
-				<key>NSIncludesSubdomains</key>
-				<string>YES</string>
-			</dict>
-			<key>http://curio.turkcell.com.tr/api/v2</key>
-			<dict>
-				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<string>YES</string>
-				<key>NSIncludesSubdomains</key>
-				<string>YES</string>
-			</dict>
-		</dict>
+		<false/>
 	</dict>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>To save lifebox photos to your device</string>
