--- a/Depo/Depo.xcodeproj/xcshareddata/xcschemes/lifeBox_Business_Bundle.xcscheme
+++ b/Depo/Depo.xcodeproj/xcshareddata/xcschemes/lifeBox_Business_Bundle.xcscheme
@@ -10,7 +10,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;cd ${PROJECT_DIR}&#10;./scripts/business_lang_update.sh&#10;">
+               scriptText = "cd ${PROJECT_DIR}&#10;./scripts/business_lang_update.sh&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
