DE-10536 Add print option again
- Connect option's visibility to a remote config value
- Use cellografId from account response to build the form data
- Updates to integrate with Sosyopix

--- a/Depo/Depo/Business/Services/RemoteConfig/FirebaseRemoteConfigDefaults.plist
+++ b/Depo/Depo/Business/Services/RemoteConfig/FirebaseRemoteConfigDefaults.plist
@@ -6,5 +6,7 @@
 	<integer>1000</integer>
 	<key>signup_support_form_treshold</key>
 	<integer>1000</integer>
+	<key>print_option_enabled</key>
+	<false/>
 </dict>
 </plist>
