--- a/Depo/Depo/App/Depo-AppStore-Info.plist
+++ b/Depo/Depo/App/Depo-AppStore-Info.plist
@@ -39,7 +39,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<string>18</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
