--- a/Depo/Depo/Business/Services/RemoteConfig/FirebaseRemoteConfigDefaults.plist
+++ b/Depo/Depo/Business/Services/RemoteConfig/FirebaseRemoteConfigDefaults.plist
@@ -8,5 +8,7 @@
 	<integer>1000</integer>
 	<key>print_option_enabled</key>
 	<false/>
+	<key>chatbot_menu_enabled</key>
+	<false/>
 </dict>
 </plist>
