DE-11310 Reset Password
remote config switch

--- a/Depo/Depo/Business/Services/RemoteConfig/FirebaseRemoteConfigDefaults.plist
+++ b/Depo/Depo/Business/Services/RemoteConfig/FirebaseRemoteConfigDefaults.plist
@@ -12,5 +12,7 @@
 	<false/>
 	<key>print_option_enabled_languages</key>
 	<string>tr</string>
+	<key>forgot_password_v2_enabled</key>
+	<false/>
 </dict>
 </plist>
