DE-11630 Dropbox Auth
New connect api with refresh token

--- a/Depo/Depo/App/Depo-AppStore-Info.plist
+++ b/Depo/Depo/App/Depo-AppStore-Info.plist
@@ -34,7 +34,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>db-422fptod5dlxrn8</string>
+				<string>db-ld8xzj3w9fsnvxd</string>
 				<string>akillidepo</string>
 				<string>fb531658366898592</string>
 			</array>
