DE-11596 Photo/Video description
add IQKeyboardManager support

--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -31,6 +31,7 @@ def core_pods
   #Keyboard
   pod 'Typist', '~> 1'
   pod 'iCarousel', '~> 1'
+  pod 'IQKeyboardManagerSwift'
 
   pod 'ReachabilitySwift'
   pod 'MBProgressHUD', '~> 1'
