DE-11630 Dropbox Auth
Add test key for Billo

--- a/Depo/Lifedrive/LifeDrive-AppStore-Info.plist
+++ b/Depo/Lifedrive/LifeDrive-AppStore-Info.plist
@@ -32,7 +32,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>db-mij832wzxlbyeiq</string>
+				<string>db-ld8xzj3w9fsnvxd</string>
 				<string>billo</string>
 				<string>fb408187279847927</string>
 			</array>
