--- a/Depo/Depo/App/Depo-AppStore-Info.plist
+++ b/Depo/Depo/App/Depo-AppStore-Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>LSApplicationCategoryType</key>
-	<string></string>
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
 	<array>
 		<string>background_processing</string>
@@ -37,6 +35,7 @@
 				<string>db-ld8xzj3w9fsnvxd</string>
 				<string>akillidepo</string>
 				<string>fb531658366898592</string>
+				<string>com.turkcell.akillidepo</string>
 			</array>
 		</dict>
 	</array>
@@ -68,6 +67,8 @@
 	<string>lifebox</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>spotify</string>
