--- a/Depo/Depo/App/Depo-AppStore.entitlements
+++ b/Depo/Depo/App/Depo-AppStore.entitlements
@@ -4,6 +4,14 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:ld9m.adj.st</string>
+		<string>applinks:tcloudstb.turkcell.com.tr</string>
+		<string>applinks:adepotest.turkcell.com.tr</string>
+		<string>applinks:mylifebox.com</string>
+		<string>applinks:testlifebox.page.link</string>
+	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.com.turkcell.akillidepo</string>
@@ -13,13 +21,6 @@
 		<string>$(AppIdentifierPrefix)by.come.life.Lifebox</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillidepo</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent</string>
-	</array>
-	<key>com.apple.developer.associated-domains</key>
-	<array>
-		<string>applinks:ld9m.adj.st</string>
-		<string>applinks:tcloudstb.turkcell.com.tr</string>
-		<string>applinks:adepotest.turkcell.com.tr</string>
-		<string>applinks:mylifebox.com</string>
 	</array>
 </dict>
 </plist>
