--- a/Depo/Lifedrive/LifeDrive_LifeTech.entitlements
+++ b/Depo/Lifedrive/LifeDrive_LifeTech.entitlements
@@ -8,6 +8,7 @@
 	<array>
 		<string>applinks:4wxe.adj.st</string>
 		<string>applinks:mybilloapp.com</string>
+		<string>applinks:billo.page.link</string>
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
