--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -20,7 +20,8 @@ def core_pods
   pod 'FirebaseAnalytics', '~> 7'
   pod 'Firebase/RemoteConfig', '~> 7'
   pod 'Firebase/DynamicLinks', '~> 7'
-  
+  pod 'Firebase/Auth', '~> 7'
+  pod 'GoogleSignIn'  
 
   pod 'Netmera', '~> 3.8.4'
 
