--- a/Depo/Depo/Business/Services/RemoteConfig/FirebaseRemoteConfigDefaults.plist
+++ b/Depo/Depo/Business/Services/RemoteConfig/FirebaseRemoteConfigDefaults.plist
@@ -14,5 +14,9 @@
 	<string>tr</string>
 	<key>forgot_password_v2_enabled</key>
 	<false/>
+	<key>google_login_enabled</key>
+	<false/>
+	<key>apple_login_enabled</key>
+	<false/>
 </dict>
 </plist>
