LB-1021 Google login
client id's

--- a/Depo/Lifedrive/LifeDrive-AppStore-Info.plist
+++ b/Depo/Lifedrive/LifeDrive-AppStore-Info.plist
@@ -37,6 +37,14 @@
 				<string>fb408187279847927</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.487629516002-t1tii6tsat259ug6q73c5ncerh768t6h</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>12</string>
