--- a/Depo/Depo/App/Depo-AppStore-Info.plist
+++ b/Depo/Depo/App/Depo-AppStore-Info.plist
@@ -44,6 +44,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>com.googleusercontent.apps.685338462870-f3pq553m2rp2tffdob3ehnfpvlne7ag7</string>
+				<string>com.googleusercontent.apps.590528416223-jat4666l0pqhvvd9k3930vlc964v3r1t</string>
 			</array>
 		</dict>
 	</array>
