--- a/Depo/LifeboxShared/LifeBox_Business/Info.plist
+++ b/Depo/LifeboxShared/LifeBox_Business/Info.plist
@@ -49,6 +49,10 @@
 		<string>TurkcellSaturaDem.ttf</string>
 		<string>TurkcellSaturaBol.ttf</string>
 		<string>TurkcellSaturaBolIta.ttf</string>
+		<string>GT-America-LC-Standard-Light.ttf</string>
+		<string>GT-America-LC-Standard-Regular.ttf</string>
+		<string>GT-America-LC-Standard-Medium.ttf</string>
+		<string>GT-America-LC-Standard-Bold.ttf</string>
 	</array>
 </dict>
 </plist>
