LB-2442 BrandAmbassador deeplink is added

--- a/Depo/Depo/App/Depo-AppStore-Info.plist
+++ b/Depo/Depo/App/Depo-AppStore-Info.plist
@@ -47,6 +47,14 @@
 				<string>com.googleusercontent.apps.590528416223-jat4666l0pqhvvd9k3930vlc964v3r1t</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>deeplink</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>53</string>
