--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -31,6 +31,7 @@ def core_pods
   pod 'GoogleConversionTracking', '~> 3'
   pod 'GoogleTagManager', '~> 7'
   pod 'Adjust', '~> 4.33.3'
+  pod 'SNCollectionViewLayout'
   #pod 'ActiveLabel'
 
   #Keyboard
