--- a/Depo/Depo/App/Depo-Debug.entitlements
+++ b/Depo/Depo/App/Depo-Debug.entitlements
@@ -21,14 +21,13 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.come.life.Lifebox</string>
+		<string>group.by.com.life.lifebox</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)by.come.life.Lifebox</string>
+		<string>$(AppIdentifierPrefix)by.com.life.lifebox</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillidepo</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent</string>
-		<string>$(AppIdentifierPrefix)by.come.life.Lifebox.LifeboxWidget</string>
 	</array>
 </dict>
 </plist>
