--- a/Depo/Depo/App/Depo.entitlements
+++ b/Depo/Depo/App/Depo.entitlements
@@ -8,7 +8,7 @@
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)by.come.life.Lifebox</string>
+		<string>$(AppIdentifierPrefix)by.com.life.lifebox</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillidepo</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent</string>
 	</array>
