--- a/Depo/Depo/App/googleAnalytics/LifeboxPlists/debug_iOS/GoogleService-Info-debug.plist
+++ b/Depo/Depo/App/googleAnalytics/LifeboxPlists/debug_iOS/GoogleService-Info-debug.plist
@@ -13,21 +13,21 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>by.come.life.Lifebox</string>
+	<string>by.com.life.lifebox</string>
 	<key>PROJECT_ID</key>
 	<string>lifeboxlifetech</string>
 	<key>STORAGE_BUCKET</key>
 	<string>lifeboxlifetech.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:805163098188:ios:80d4ad2ac5355c36b394e9</string>
 	<key>DATABASE_URL</key>
