--- a/Depo/LifeboxWidget/LifeboxWidgetExtensionDebug.entitlements
+++ b/Depo/LifeboxWidget/LifeboxWidgetExtensionDebug.entitlements
@@ -4,12 +4,11 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.come.life.Lifebox</string>
+		<string>group.by.com.life.lifebox</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)by.come.life.Lifebox.LifeboxWidget</string>
-		<string>$(AppIdentifierPrefix)by.come.life.Lifebox</string>
+		<string>$(AppIdentifierPrefix)by.com.life.lifebox</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillidepo</string>
 		<string>$(AppIdentifierPrefix)com.turkcell.akillideponew.ent</string>
 	</array>
