--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -8,7 +8,7 @@ ENV['SWIFT_VERSION'] = '5'
 
 
 def shared_pods
-  pod 'Alamofire', '~> 4.8.1'
+  #pod 'Alamofire', '~> 4.8.1'
   pod 'SwiftyJSON', '~> 5'
   pod 'KeychainSwift', '~> 19'
 end
