--- a/Depo/Depo.xcodeproj/xcshareddata/xcschemes/Lifebox.xcscheme
+++ b/Depo/Depo.xcodeproj/xcshareddata/xcschemes/Lifebox.xcscheme
@@ -74,7 +74,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "AppStore"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
