Typist 1.4.3, IQKeyboardManagerSwift 7.1.1 SPM, up version iOS to 13

--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -35,9 +35,9 @@ def core_pods
   #pod 'ActiveLabel'
 
   #Keyboard
-  pod 'Typist', '~> 1'
+#  pod 'Typist', '~> 1'
   pod 'iCarousel', '~> 1'
-  pod 'IQKeyboardManagerSwift'
+#  pod 'IQKeyboardManagerSwift'
 
   pod 'ReachabilitySwift'
   pod 'MBProgressHUD', '~> 1'
