--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -52,7 +52,7 @@ def core_pods
   #migration
   pod 'SQLite.swift', '0.12.0'
   
-  pod 'SwiftyGif', '~> 5'
+#  pod 'SwiftyGif', '~> 5'
 end
 
 def lifebox_pods
