--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -64,7 +64,7 @@ def lifebox_pods
 #  pod 'SwiftyDropbox', '~> 6'
   pod 'MaterialComponents/Slider'
   pod 'Mantis', :git => 'https://github.com/fireengine-ios/Mantis.git', :tag => 'FE-1.3.2.5'
-  pod 'MetalPetal/Swift', '=1.15.0'
+#  pod 'MetalPetal/Swift', '=1.15.0'
 end
 
 def sharing_pods
