--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -21,7 +21,7 @@ def core_pods
   pod 'Firebase/RemoteConfig', '~> 7'
   pod 'Firebase/DynamicLinks', '~> 7'
   pod 'Firebase/Auth', '~> 7'
-  pod 'GoogleSignIn'
+#  pod 'GoogleSignIn'
   pod 'AGConnectCore'
   pod 'AGConnectAppLinking'
 
