FBSDKCoreKit, FBSDKLoginKit, FBSDKShareKit 12.3.2 SPM

--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -57,9 +57,9 @@ end
 
 def lifebox_pods
   core_pods
-  pod 'FBSDKCoreKit', '~> 8'
-  pod 'FBSDKLoginKit', '~> 8'
-  pod 'FBSDKShareKit', '~> 8'
+#  pod 'FBSDKCoreKit', '~> 8'
+#  pod 'FBSDKLoginKit', '~> 8'
+#  pod 'FBSDKShareKit', '~> 8'
   pod 'YYImage', '~> 1'
 #  pod 'SwiftyDropbox', '~> 6'
   pod 'MaterialComponents/Slider'
