--- a/Depo/Podfile
+++ b/Depo/Podfile
@@ -15,12 +15,12 @@ end
 
 def core_pods
   shared_pods
-  pod 'Firebase/Core', '~> 7'
-  pod 'Firebase/Crashlytics', '~> 7'
-  pod 'FirebaseAnalytics', '~> 7'
-  pod 'Firebase/RemoteConfig', '~> 7'
-  pod 'Firebase/DynamicLinks', '~> 7'
-  pod 'Firebase/Auth', '~> 7'
+#  pod 'Firebase/Core', '~> 7'
+#  pod 'Firebase/Crashlytics', '~> 7'
+#  pod 'FirebaseAnalytics', '~> 7'
+#  pod 'Firebase/RemoteConfig', '~> 7'
+#  pod 'Firebase/DynamicLinks', '~> 7'
+#  pod 'Firebase/Auth', '~> 7'
 #  pod 'GoogleSignIn'
   pod 'AGConnectCore'
   pod 'AGConnectAppLinking'
